fix shift and caps lock
caps lock isn't detected, but if you push the key and the browser captures the keydown event for CAPS LOCK key, all the keys will go capital

--- a/style.css
+++ b/style.css
@@ -23,6 +23,16 @@ div {
     background-color: #dddddd;
 }
 
+
+.key-error {
+    background-color: #ff0000;
+}
+
+
+.key-success {
+    background-color: #00ff00;
+}
+
 .tab {
     padding-left: 20px;
     padding-right: 20px;
